[project]
name = "plaster-surgery-topicmodeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bertopic>=0.17.0",
    "hdbscan>=0.8.40",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "regex>=2024.11.6",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "transformers>=4.52.4",
    "umap-learn>=0.5.7",
]
